UPDATED the skills section copy

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <section id="welcome" class="grid">
       <div class="welcome-text">
         <h2>Space Enthusiast<br />& Javascript Developer</h2>
-        <p class="leading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur mollitia tenetur veniam
-          similique vitae voluptas quae, maxime deleniti sit, ad debitis sapiente architecto nemo facere dolorem impedit
-          voluptatibus non officiis.
+        <p class="leading">Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </p>
         <a href="#portfolio" class="button">View My Work</a>
       </div>
@@ -57,15 +55,15 @@
         </li>
         <li>
           <img src="assets/images/comet_2.svg" alt="comet_2">
-          <h4>JavaScript</h4>
+          <h4>React</h4>
         </li>
         <li>
           <img src="assets/images/comet_3.svg" alt="comet_3">
-          <h4>JavaScript</h4>
+          <h4>Firebase</h4>
         </li>
         <li>
           <img src="assets/images/comet_4.svg" alt="comet_4">
-          <h4>JavaScript</h4>
+          <h4>Flutter</h4>
         </li>
       </ul>
     </section>
