CHANGED some of section classes for IDs

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="assets/images/banner_image.png" alt="pic of planets">
       </div>
     </section>
-    <section class="portfolio">
+    <section id="portfolio">
       <h3>Some of my Projects</h3>
       <div class="projects grid">
         <a href="#">
