ADDED the link tag connection to the reset.css file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosmo Junkie</title>
 
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
   </head>
 
@@ -69,7 +70,7 @@
     </section>
     <section id="contact">
       <h3>Get in Touch</h3>
-      <p class="leading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+      <p class="leading">Lorem ipsum, dolor sit amet consectetur.</p>
       <form>
         <input type="text" placeholder="NAME">
         <input type="email" placeholder="EMAIL">
