--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h1>Cosmo Junkie</h1>
       <ul>
         <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#skilss">Skills</a></li>
-        <li><a href="#contact">Contantc</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contanct</a></li>
       </ul>
     </nav>
     <section id="welcome" class="grid">
